Alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,13 @@ body {
 }
 
 h1{
+    text-align: justify;
     font-size: 7.5vw !important;
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
 h2{
+    text-align: justify;
     font-size: 3.75vw !important;
     color: cyan !important;
     opacity: 0.5;
@@ -33,6 +35,7 @@ p {
 }
 
 h3, h5, link{
+    text-align: justify;
     text-decoration: none !important;
     color: cyan !important;
 }
