--- a/src/homepage/Section1.css
+++ b/src/homepage/Section1.css
@@ -1,7 +1,3 @@
-.section-paragraphs{
-    max-width: 50vw;
-}
-
 #spotify-player{
     position: absolute;
     height: 22rem;
