--- a/src/homepage/Socials.css
+++ b/src/homepage/Socials.css
@@ -16,7 +16,7 @@
 }
 
 #logos{
-    margin-bottom: 10%;
+    margin-bottom: 1vh;
     width: 4rem;
     height: 4rem;
     border-radius: 9px/8px;
